fix(button): Tweak vertical alignment of button icons, closes #739

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -51,7 +51,7 @@
     padding: 0 0 $button-border-width 0;
     vertical-align: inherit;
     font-size: $button-icon-size;
-    line-height: $button-height - $button-border-width;
+    line-height: $button-height - $button-border-width + 1;
   }
   &.icon-left:before {
     float: left;
@@ -164,7 +164,7 @@
   border-color: transparent;
   background: none;
 
-  &.button:active, 
+  &.button:active,
   &.button.active {
     border-color: transparent;
     background: none;
@@ -206,8 +206,8 @@
 .button-block {
   display: block;
   clear: both;
-  
-  &:after { 
+
+  &:after {
     clear: both;
   }
 }
